# appointments-api/src/main/java/com/liferay/appointments/resource/v1_0/AppointmentResource.java
@@ -3,8 +3,11 @@ package com.liferay.appointments.resource.v1_0;
 import com.liferay.appointments.dto.v1_0.Appointment;
 import com.liferay.portal.kernel.model.Company;
 import com.liferay.portal.kernel.model.User;
+import com.liferay.portal.kernel.search.Sort;
+import com.liferay.portal.kernel.search.filter.Filter;
 import com.liferay.portal.vulcan.accept.language.AcceptLanguage;
 import com.liferay.portal.vulcan.pagination.Page;
+import com.liferay.portal.vulcan.pagination.Pagination;
 
 import javax.annotation.Generated;
 
@@ -27,7 +30,9 @@ import org.osgi.annotation.versioning.ProviderType;
 @ProviderType
 public interface AppointmentResource {
 
-	public Page<Appointment> getSiteAppointmentsPage(Long siteId)
+	public Page<Appointment> getSiteAppointmentsPage(
+			Long siteId, String search, Filter filter, Pagination pagination,
+			Sort[] sorts)
 		throws Exception;
 
 	public Appointment postSiteAppointment(Long siteId, Appointment appointment)
