# appointments-impl/rest-openapi.yaml
@@ -31,6 +31,26 @@ paths:
           schema:
             format: int64
             type: integer
+        - in: query
+          name: filter
+          schema:
+            type: string
+        - in: query
+          name: page
+          schema:
+            type: integer
+        - in: query
+          name: pageSize
+          schema:
+            type: integer
+        - in: query
+          name: search
+          schema:
+            type: string
+        - in: query
+          name: sort
+          schema:
+            type: string
       responses:
         200:
           content:
