# appointments-impl/src/main/java/com/liferay/appointments/internal/resource/v1_0/AppointmentResourceImpl.java
@@ -1,16 +1,29 @@
 package com.liferay.appointments.internal.resource.v1_0;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
+import javax.ws.rs.core.MultivaluedMap;
 
 import com.liferay.appointments.dto.v1_0.Appointment;
+import com.liferay.appointments.internal.odata.AppointmentEntityModel;
 import com.liferay.appointments.internal.util.AppointmentUtil;
+import com.liferay.appointments.internal.util.DateEntityFieldProvider;
 import com.liferay.appointments.resource.v1_0.AppointmentResource;
+import com.liferay.dynamic.data.mapping.model.DDMStructure;
 import com.liferay.journal.model.JournalArticle;
 import com.liferay.journal.service.JournalArticleService;
+import com.liferay.portal.kernel.exception.PortalException;
+import com.liferay.portal.kernel.search.BooleanClauseOccur;
+import com.liferay.portal.kernel.search.Sort;
+import com.liferay.portal.kernel.search.filter.BooleanFilter;
+import com.liferay.portal.kernel.search.filter.Filter;
+import com.liferay.portal.kernel.search.filter.TermFilter;
 import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.util.GetterUtil;
+import com.liferay.portal.kernel.workflow.WorkflowConstants;
+import com.liferay.portal.odata.entity.EntityModel;
 import com.liferay.portal.vulcan.pagination.Page;
+import com.liferay.portal.vulcan.pagination.Pagination;
+import com.liferay.portal.vulcan.resource.EntityModelResource;
+import com.liferay.portal.vulcan.util.SearchUtil;
 
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
@@ -19,24 +32,42 @@ import org.osgi.service.component.annotations.ServiceScope;
 /**
  * @author Javier Gamarra
  */
-@Component(
-	properties = "OSGI-INF/liferay/rest/v1_0/appointment.properties",
-	scope = ServiceScope.PROTOTYPE, service = AppointmentResource.class
-)
-public class AppointmentResourceImpl extends BaseAppointmentResourceImpl {
+@Component(properties = "OSGI-INF/liferay/rest/v1_0/appointment.properties", scope = ServiceScope.PROTOTYPE, service = AppointmentResource.class)
+public class AppointmentResourceImpl extends BaseAppointmentResourceImpl implements EntityModelResource {
 
   @Override
-  public Page<Appointment> getSiteAppointmentsPage(Long siteId) throws Exception {
-    List<Appointment> appointments = new ArrayList<>();
+  public Page<Appointment> getSiteAppointmentsPage(Long siteId, String search, Filter filter, Pagination pagination,
+      Sort[] sorts) throws Exception {
 
-    List<JournalArticle> articles = _journalArticleService.getArticles(siteId, 0,
-        contextAcceptLanguage.getPreferredLocale());
+    DDMStructure ddmStructure = _appointmentUtil.getDDMStructure(siteId);
 
-    for (JournalArticle article : articles) {
-      appointments.add(_toAppointment(article));
-    }
+    return SearchUtil.search(booleanQuery -> {
+      BooleanFilter booleanFilter = booleanQuery.getPreBooleanFilter();
 
-    return Page.of(appointments);
+      booleanFilter.add(new TermFilter(com.liferay.portal.kernel.search.Field.CLASS_TYPE_ID,
+          String.valueOf(ddmStructure.getStructureId())), BooleanClauseOccur.MUST);
+    }, filter, JournalArticle.class, search, pagination,
+        queryConfig -> queryConfig.setSelectedFieldNames(com.liferay.portal.kernel.search.Field.ARTICLE_ID,
+            com.liferay.portal.kernel.search.Field.SCOPE_GROUP_ID),
+        searchContext -> {
+          searchContext.setAttribute(com.liferay.portal.kernel.search.Field.STATUS, WorkflowConstants.STATUS_APPROVED);
+          searchContext.setCompanyId(contextCompany.getCompanyId());
+          searchContext.setGroupIds(new long[] { siteId });
+        },
+        document -> _toAppointment(_journalArticleService.getLatestArticle(
+            GetterUtil.getLong(document.get(com.liferay.portal.kernel.search.Field.SCOPE_GROUP_ID)),
+            document.get(com.liferay.portal.kernel.search.Field.ARTICLE_ID), WorkflowConstants.STATUS_APPROVED)),
+        sorts);
+  }
+
+  @Override
+  public EntityModel getEntityModel(MultivaluedMap multivaluedMap) throws PortalException {
+
+    Object siteId = multivaluedMap.getFirst("siteId");
+
+    DDMStructure ddmStructure = _appointmentUtil.getDDMStructure(siteId);
+
+    return new AppointmentEntityModel(_dateEntityFieldProvider.getDateEntityField(ddmStructure));
   }
 
   @Override
@@ -86,5 +117,8 @@ public class AppointmentResourceImpl extends BaseAppointmentResourceImpl {
 
   @Reference
   private AppointmentUtil _appointmentUtil;
+
+  @Reference
+  private DateEntityFieldProvider _dateEntityFieldProvider;
 
 }
